--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 html {
     box-sizing: border-box;
+    font-family: Poppins,sans-serif;
 }
     
 *, ::before, ::after {
     box-sizing: inherit;
 }
 
-* {
+/* * {
     border: 2px red solid; 
+} */
+
+@font-face {
+    font-family: Poppins;
+    src: url(./assets/poppins.regular.ttf);
 }
 
 img {
@@ -28,34 +34,60 @@ img {
 }
 
 section#right-side {
-    margin: 30px;
+    /* margin: 30px; */
+    width: 60vw;
 }
 
 h1 {
     font-size: 3em;
     text-align: center;
+    margin-top: 0;
+    padding-top: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 p {
     font-size: 1.3em;
+    margin-left: 30px;
+    margin-right: 50px;
 }
 
-form {
+.form-top {
     display: flex;
-    flex-direction: column;
+    justify-content: start;
     flex-wrap: wrap;
-    height: 50vh;
+    gap: 50px;
+    margin-bottom: 30px;
+    padding: 10px;
+    box-shadow: 0 4px 2px -2px gray;
 }
-label {
+
+label, input {
     font-size: 1.3em;
 }
 
 input {
-    width: 100px;
-    height: 3vh;
+    border-radius: 5%;
+    padding: 5px;
 }
 
-.input-flex {
+.inputs-right,
+.inputs-left {
     display: flex;
     flex-direction: column;
+    /* gap: 10px; */
+}
+
+.input-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 13px;
+    gap: 3px;
+}
+
+.right-side-top,
+.form-bottom {
+    background-color: rgb(234, 232, 232);
 }
